--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+
     <title>Student Portfolio</title>
 </head>
 
 <body>
-    
+ <header class = "Header">
+    <h1>Student Portfolio</h1>
+    <h2>Hello</h2>
+ </header>   
 </body>
 </html>
