--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- reset style sheet is copied from https://meyerweb.com/eric/tools/css/reset/ -->
+    <link rel="stylesheet" type="text/css" href="./assets/css/resetstyle.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
-
+    
+    
     <title>Student Portfolio</title>
 </head>
 
-<body>
+<body>it
  <header class="Header">
     <h1>Gary's Portfolio</h1>
     <nav>
