--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Student Portfolio</title>
 </head>
 
-<body>it
+<body>
  <header class="Header">
     <h1>Gary's Portfolio</h1>
     <nav>
